remove RXJS+AzureAPI dependency